tests/baselines/reference/privateNamesNotAllowedInVariableDeclarations.errors.txt
//// [tests/cases/conformance/classes/members/privateNames/privateNamesNotAllowedInVariableDeclarations.ts] ////

privateNamesNotAllowedInVariableDeclarations.ts(1,7): error TS18029: Private identifiers are not allowed in variable declarations.


==== privateNamesNotAllowedInVariableDeclarations.ts (1 errors) ====
    const #foo = 3;
          ~~~~
!!! error TS18029: Private identifiers are not allowed in variable declarations.
    